공지를 수정할때 file 컬렉션이 새로 생겨 영속성 컨텍스트가 관리하지 못하는 문제 수정